tests/transpiler/x/java/let_and_print.error
exit status 1
Main.java:6: error: non-static variable a cannot be referenced from a static context
        System.out.println(a + b);
                           ^
Main.java:6: error: non-static variable b cannot be referenced from a static context
        System.out.println(a + b);
                               ^
2 errors
