tests/transpiler/x/java/let_and_print.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 10:39:14 UTC
public class Main {
    public static void main(String[] args) {
        var a = 10;
        var b = 20;
        System.out.println(a + b);
    }
}
